--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                - [08/2024] Animate-A-Story was accepted to <font style="color: #D8429E">ECCV 2024 AI4VA Workshop</font>.<br> 
+                - [08/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024 AI4VA Workshop</font>.<br> 
                 - [07/2024] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2024</font>.<br> 
                 - [07/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024</font>.<br> 
                 - [05/2024] We released a survey paper: <a href="https://arxiv.org/abs/2405.19334">LLMs Meet Multimodal Generation and Editing: A Survey</a>.<br>
