--- a/index.html
+++ b/index.html
@@ -112,71 +112,74 @@
       </tr>
       </tbody>
     </table>
-    <!-- mmtrail -->
-    <tr>
-      <td style="padding:20px;width:25%;vertical-align:middle;">
-        <img src='myassets/survey.jpeg' width="100%" height="60%">
-      </td>
-      <td style="padding:20px;width:75%;vertical-align:middle;">
-        <a href="https://arxiv.org/abs/2405.19334">
-          <span class="papertitle">MMTrail: A Multimodal Trailer Video Dataset with Language and Music Descriptions</span>
-        </a>
-        <br>
-        <a href="#">Xiaowei Chi</a>, 
-        <a href="#">Aosong Cheng</a>, 
-        <a href="#">Pengjun Fang</a>, 
-        <a href="#">Yatian Wang</a>, 
-        <a href="https://scholar.google.com/citations?user=dghq4MQAAAAJ&hl=en">Zeyue Tian</a>, 
-        <strong>Yingqing He</strong>,
-        <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en">Zhaoyang Liu</a>, 
-        <a href="#">Xingqun Qi</a>, 
-        <a href="#">Jiahao Pan</a>, 
-        <a href="#">Rongyu Zhang</a>, 
-        <a href="#">Mengfei Li</a>, 
-        <a href="#">Yanbing Jiang</a>, 
-        <a href="http://wei-xue.com/">Wei Xue</a>, 
-        <a href="http://wei-xue.com/">Wenhan Luo</a>, 
-        <a href="https://cqf.io/">Qifeng Chen</a>
-        <a href="#">Shanghang Zhang</a>, 
-        <a href="#">Qifeng Liu</a>, 
-        <a href="https://scholar.google.com/citations?user=-0q6cIYAAAAJ&hl=en">Yike Guo</a>, 
-        <br>
-        <em>arXiv</em>, 2024
-        <br>
-        <a href="https://mattie-e.github.io/MMTrail/">Project page</a> / 
-        <a href="https://arxiv.org/abs/2407.20962">arXiv</a> / 
-        <a href="https://github.com/litwellchi/MMTrail">Github</a>
-        <p>MMTrail is a large-scale multi-modality video-language dataset with over 20M trailer clips, featuring high-quality multimodal captions that integrate context, visual frames, and background music, aiming to enhance cross-modality studies and fine-grained multimodal-language model training.
-        </p>
-      </td>
-    </tr>
-    <!-- freetraj -->
-    <tr>
-      <td style="padding:20px;width:25%;vertical-align:middle;">
-        <img src='myassets/survey.jpeg' width="100%" height="60%">
-      </td>
-      <td style="padding:20px;width:75%;vertical-align:middle;">
-        <a href="https://arxiv.org/abs/2405.19334">
-          <span class="papertitle">FreeTraj: Tuning-Free Trajectory Control in Video Diffusion Models</span>
-        </a>
-        <br>
-        <a href="http://haonanqiu.com/">Haonan Xiu</a>, 
-        <a href="https://frozenburning.github.io/">Zhaoxi Chen</a>, 
-        <a href="http://luoping.me/author/zhouxia-wang/">Zhouxia Wang</a>, 
-        <a href="https://github.com/YingqingHe"><strong>Yingqing He</strong></a>, 
-        <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
-        <a href="https://liuziwei7.github.io/">Ziwei Liu</a>
-        <br>
-        <em>arXiv</em>, 2024
-        <br>
-        <a href="http://haonanqiu.com/projects/FreeTraj.html">Project page</a> / 
-        <a href="https://arxiv.org/abs/2406.16863">arXiv</a> / 
-        <a href="https://github.com/arthur-qiu/FreeTraj?tab=readme-ov-file">Github</a>
-        <p>FreeTraj is a tuning-free method for trajectory-controllable video generation based on pre-trained video diffusion models.
-        </p>
-      </td>
-    </tr>
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <!-- mmtrail -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <video  width=100% height=100% muted autoplay loop>
+            <source src="myassets/mmtrail.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle;">
+          <a href="https://arxiv.org/abs/2405.19334">
+            <span class="papertitle">MMTrail: A Multimodal Trailer Video Dataset with Language and Music Descriptions</span>
+          </a>
+          <br>
+          <a href="#">Xiaowei Chi</a>, 
+          <a href="#">Aosong Cheng</a>, 
+          <a href="#">Pengjun Fang</a>, 
+          <a href="#">Yatian Wang</a>, 
+          <a href="https://scholar.google.com/citations?user=dghq4MQAAAAJ&hl=en">Zeyue Tian</a>, 
+          <a href="https://github.com/YingqingHe"><strong><font style="color: #000000;">Yingqing He</font></strong></a>, 
+          <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en">Zhaoyang Liu</a>, 
+          <a href="#">Xingqun Qi</a>, 
+          <a href="#">Jiahao Pan</a>, 
+          <a href="#">Rongyu Zhang</a>, 
+          <a href="#">Mengfei Li</a>, 
+          <a href="#">Yanbing Jiang</a>, 
+          <a href="http://wei-xue.com/">Wei Xue</a>, 
+          <a href="http://wei-xue.com/">Wenhan Luo</a>, 
+          <a href="https://cqf.io/">Qifeng Chen</a>
+          <a href="#">Shanghang Zhang</a>, 
+          <a href="#">Qifeng Liu</a>, 
+          <a href="https://scholar.google.com/citations?user=-0q6cIYAAAAJ&hl=en">Yike Guo</a>, 
+          <br>
+          <em>arXiv</em>, 2024
+          <br>
+          <a href="https://mattie-e.github.io/MMTrail/">Project page</a> / 
+          <a href="https://arxiv.org/abs/2407.20962">arXiv</a> / 
+          <a href="https://github.com/litwellchi/MMTrail">Github</a>
+          <p>MMTrail is a large-scale multi-modality video-language dataset with over 20M trailer clips, featuring high-quality multimodal captions that integrate context, visual frames, and background music, aiming to enhance cross-modality studies and fine-grained multimodal-language model training.
+          </p>
+        </td>
+      </tr>
+      <!-- freetraj -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <img src='myassets/freetraj.jpg' width="100%" height="60%">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle;">
+          <a href="https://arxiv.org/abs/2405.19334">
+            <span class="papertitle">FreeTraj: Tuning-Free Trajectory Control in Video Diffusion Models</span>
+          </a>
+          <br>
+          <a href="http://haonanqiu.com/">Haonan Xiu</a>, 
+          <a href="https://frozenburning.github.io/">Zhaoxi Chen</a>, 
+          <a href="http://luoping.me/author/zhouxia-wang/">Zhouxia Wang</a>, 
+          <a href="https://github.com/YingqingHe"><strong><font style="color: #000000;">Yingqing He</font></strong></a>, 
+          <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
+          <a href="https://liuziwei7.github.io/">Ziwei Liu</a>
+          <br>
+          <em>arXiv</em>, 2024
+          <br>
+          <a href="http://haonanqiu.com/projects/FreeTraj.html">Project page</a> / 
+          <a href="https://arxiv.org/abs/2406.16863">arXiv</a> / 
+          <a href="https://github.com/arthur-qiu/FreeTraj?tab=readme-ov-file">Github</a>
+          <p>FreeTraj is a tuning-free method for trajectory-controllable video generation based on pre-trained video diffusion models.
+          </p>
+        </td>
+      </tr>
       <!-- survey -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle;">
