--- a/index.html
+++ b/index.html
@@ -78,18 +78,23 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
+                - [10/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://venue-tutorial.github.io/">ECCV 2024 VENUE (Recent Advances in Video Content Understanding and Generation) Tutorial</a>
+                 on the topic of <i>"LLMs Meet image and video generation"</i>. 
+                 The slides are available at our <a href="https://github.com/YingqingHe/Awesome-LLMs-meet-Multimodal-Generation/blob/main/ECCV2024-VENUE-Tutorial-Slides-LLM-Meet-Image-and-Video-Generation.pdf">Github repo</a>.<br>
+                - [08/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://hunyuan.tencent.com/">Tencent Hunyuan</a> 
+                 on the topic of <i>"LLMs Meet Multimodal Generation and Editing"</i><br>
                 - [08/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024 AI4VA Workshop</font>.<br> 
                 - [07/2024] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2024</font>.<br> 
                 - [07/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024</font>.<br> 
                 - [05/2024] We released a survey paper: <a href="https://arxiv.org/abs/2405.19334">LLMs Meet Multimodal Generation and Editing: A Survey</a>.<br>
-                - [03/2024] Invited talk at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
+                - [03/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
                 - [03/2024] 1 paper was accepted to <font style="color: #D8429E">CVPR 2024</font>.<br> 
                 - [02/2024] 1 paper was accepted to <font style="color: #D8429E">TVCG 2024</font>.<br> 
                 - [01/2024] 2 papers were accepted to <font style="color: #D8429E">ICLR 2024</font> (including 1 Spotlight paper).<br> 
                 - [12/2023] 1 paper was accepted to <font style="color: #D8429E">AAAI 2024</font>.<br> 
                 - [11/2023] Released <a href="https://arxiv.org/abs/2310.19512">VideoCrafter 1</a>.<br>
                 - [08/2023] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2023</font>.<br> 
-                - [06/2023] Invited talk at <a href="https://sites.google.com/view/loveucvpr23/home">LOVEU Workshop</a> at <font style="color: #D8429E">CVPR 2023</font> on the topic of <i>"Crafting Your Videos: From Unconditional to <br>
+                - [06/2023] <font style="color: #d07c22">Invited talk</font> at <a href="https://sites.google.com/view/loveucvpr23/home">CVPR 2023 LOVEU Workshop</a> on the topic of <i>"Crafting Your Videos: From Unconditional to <br>
                   &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
                   Controllable Video Diffusion Models"</i>.<br>
                 - [04/2023] Released <a href="https://github.com/AILab-CVC/VideoCrafter">VideoCrafter 0.9</a>.<br>
