--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <span class="papertitle">FreeTraj: Tuning-Free Trajectory Control in Video Diffusion Models</span>
           </a>
           <br>
-          <a href="http://haonanqiu.com/">Haonan Xiu</a>, 
+          <a href="http://haonanqiu.com/">Haonan Qiu</a>, 
           <a href="https://frozenburning.github.io/">Zhaoxi Chen</a>, 
           <a href="http://luoping.me/author/zhouxia-wang/">Zhouxia Wang</a>, 
           <a href="https://github.com/YingqingHe"><strong><font style="color: #000000;">Yingqing He</font></strong></a>, 
