--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             <span class="papertitle">Freenoise: Tuning-free longer video diffusion via noise rescheduling</span>
           </a>
           <br>
-          <a href="http://haonanqiu.com/">Haonan Xiu</a>, 
+          <a href="http://haonanqiu.com/">Haonan Qiu</a>, 
           <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
           <a href="https://yzhang2016.github.io" target="_blank">Yong Zhang</a>,
           <strong>Yingqing He</strong>,
