--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <!-- mmtrail -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle;">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/mmtrail.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -162,7 +162,7 @@
       <!-- freetraj -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle;">
-          <img src='myassets/freetraj.jpg' width="100%" height="60%">
+          <img src='myassets/freetraj.jpg' width="100%">
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle;">
           <a href="https://arxiv.org/abs/2405.19334">
@@ -188,7 +188,7 @@
       <!-- survey -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle;">
-          <img src='myassets/survey.jpeg' width="100%" height="60%">
+          <img src='myassets/survey.jpeg' width="100%">
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle;">
           <a href="https://arxiv.org/abs/2405.19334">
@@ -244,7 +244,7 @@
           <a href="https://scholar.google.com/citations?user=AjxoEpIAAAAJ&hl=zh-CN">Wei Liu</a>, 
           <a href="https://cqf.io/">Qifeng Chen</a>
           <br>
-          <em>arXiv</em>, 2024
+          <em>AAAI</em>, 2025
           <br>
           <a href="https://follow-your-click.github.io/">Project page</a> / 
           <a href="https://arxiv.org/abs/2403.08268">arXiv</a> / 
@@ -257,7 +257,7 @@
       <!-- follow-your-emoji -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle;">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/fye.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -293,7 +293,7 @@
       <!-- Animate-a-story -->
       <tr >
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/teddybear.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
@@ -303,9 +303,9 @@
             <span class="papertitle">Animate-A-Story: Storytelling with Retrieval-Augmented Video Generation</span>
           </a>
           <br>
-          <strong>Yingqing He</strong>,
-          <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
-          <font style="color: #1772d0;">Haoxin Chen, </font> &nbsp;
+          <strong>Yingqing He</strong>,<sup>*</sup>
+          <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia<sup>*</sup></a>,
+          <font style="color: #1772d0;">Haoxin Chen,<sup>*</sup> </font> &nbsp;
           <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
           <font style="color: #1772d0;">Yuan Gong, </font> &nbsp;
           <a href="https://doubiiu.github.io/" target="_blank">Jinbo Xing</a>,
@@ -332,7 +332,7 @@
       <!-- cheapscaling -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src='myassets/cheap.jpg' width="100%" height="60%">
+          <img src='myassets/cheap.jpg' width="100%">
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://guolanqing.github.io/Self-Cascade/">
@@ -366,7 +366,7 @@
       <!-- seeing-and-hearing -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src='myassets/seeing.png' width="100%" height="60%">
+          <img src='myassets/seeing.png' width="100%">
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://yzxing87.github.io/Seeing-and-Hearing/">
@@ -376,7 +376,7 @@
           <a href="https://yzxing87.github.io/" >Yazhou Xing</a><sup>*</sup>,
           <strong>Yingqing He</strong><sup>*</sup>,
           <!-- <a href="#" target="_blank">Zeyue Tian</a>, -->
-          <font style="color: #1772d0;">Zeyue Tian, </font> &nbsp;
+          <font style="color: #1772d0;">Zeyue Tian,<sup>*</sup> </font> &nbsp;
           <a href="https://xinntao.github.io/" target="_blank">Xintao Wang</a>,
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
           <br>
@@ -395,7 +395,7 @@
 
       <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/scalecrafter.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -409,8 +409,8 @@
           <a href="https://phogzone.com/">Peter Hedman</a>,
           <a href="http://www.ricardomartinbrualla.com/">Ricardo Martin-Brualla</a>, <br>
           <a href="https://pratulsrinivasan.github.io/">Pratul Srinivasan</a>, -->
-          <strong>Yingqing He</strong><sup>*</sup>,
-          <font style="color: #1772d0;">Shaoshu Yang, </font> &nbsp;
+          <strong>Yingqing He</strong>,<sup>*</sup>
+          <font style="color: #1772d0;">Shaoshu Yang,<sup>*</sup> </font> &nbsp;
           <font style="color: #1772d0;">Haoxin Chen, </font> &nbsp;
           <a href="http://vinthony.github.io/" target="_blank">Xiaodong Cun</a>,
           <a href="https://menghanxia.github.io/" target="_blank">Menghan Xia</a>,
@@ -435,7 +435,7 @@
       <!-- MagicStick -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/magicstick.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -454,7 +454,7 @@
           <font style="color: #1772d0;">Xiu Li, </font> &nbsp;
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
           <br>
-          <em>arXiv</em>, 2023
+          <em>WACV</em>, 2024
           <br>
           <a href="https://magic-stick-edit.github.io/">Project page</a> / 
           <a href="https://arxiv.org/abs/2312.03047">arXiv</a> / 
@@ -468,7 +468,7 @@
       <!-- Freenoise -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/freenoise.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -501,7 +501,7 @@
       <!-- Follow-your-pose -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/fyp/girl_yellow.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -534,7 +534,7 @@
       <!-- Make-Your-Video -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/myv.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -571,7 +571,7 @@
       <!-- TaleCrafter -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/talecrafter.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -607,7 +607,7 @@
       <!-- Videocrafter1 -->
       <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <img src='myassets/videocrafter/girl.gif' width="100%" height=75% >
+          <img src='myassets/videocrafter/girl.gif' width="100%">
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://ailab-cvc.github.io/videocrafter/">
@@ -641,7 +641,7 @@
       <!-- LVDM -->
       <tr bgcolor="#ffffd0">
         <td style="padding:20px;width:25%;vertical-align:middle">
-          <video  width=100% height=100% muted autoplay loop>
+          <video  width=100% muted autoplay loop>
             <source src="myassets/lvdm.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
@@ -682,10 +682,10 @@
             <span class="papertitle">Interpreting class conditional GANs with channel awareness</span>
           </a>
           <br>
-          <strong>Yingqing He</strong>,
+          <strong>Yingqing He</strong>, &nbsp;
           <font style="color: #1772d0;">Zhiyi Zhang, </font> &nbsp;
           <font style="color: #1772d0;">Jiapeng Zhu, </font> &nbsp;
-          <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>,
+          <a href="https://shenyujun.github.io/" target="_blank">Yujun Shen</a>, &nbsp;
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
           <br>
           <em>arXiv</em>, 2022
@@ -710,9 +710,9 @@
             <span class="papertitle">Unsupervised portrait shadow removal via generative priors</span>
           </a>
           <br>
-          <strong>Yingqing He</strong><sup>*</sup>,
+          <strong>Yingqing He</strong>,<sup>*</sup> &nbsp;
           <!-- <a href="" target="_blank">Yazhou Xing</a><sup>*</sup>, -->
-          <font style="color: #1772d0;">Yazhou Xing, </font> &nbsp;
+          <font style="color: #1772d0;">Yazhou Xing,<sup>*</sup> </font> &nbsp;
           <font style="color: #1772d0;">Tianjia Zhang, </font> &nbsp;
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
           <br>
