--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
                   Yingqing He
                 </p>
                 <p>
-                  Hi 👋😋. 
-                  I am currently a Ph.D. student at <a href="https://hkust.edu.hk/">HKUST</a> supervised by <a href="https://cqf.io/">Prof. Qifeng Chen</a>. 
+                  Hi there👋😋. <br>
+                  I am a Ph.D. student at <a href="https://hkust.edu.hk/">HKUST</a> supervised by <a href="https://cqf.io/">Prof. Qifeng Chen</a>. 
                 </p>
                 <p>
-                  My main research focus is text-to-video generation, video diffusion models and related downstream applications.
-                  I am also working at other AIGC-related research💖.
+                  My research focuses are <strong>text-to-video generation, multimodal generation, and controllable generation</strong>.
+                  <!-- I am also working at other AIGC-related research💖. -->
                 </p>
                 <p>
                   Welcome to any types of research collaboration and discussions! 
-                  Our lab is hiring engineering-oriented research assistant (RA). If you would like to apply, feel free to reach out with your CV!
+                  <!-- Our lab is hiring engineering-oriented research assistant (RA). If you would like to apply, feel free to reach out with your CV! -->
                 </p>
                 <p style="text-align:center">
                   <a href="yhebm@connect.ust.hk">Email</a> &nbsp;/&nbsp;
@@ -75,35 +75,47 @@
           
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-            <td style="padding:20px;width:100%;vertical-align:middle">
+              <td style="padding:20px;width:100%;vertical-align:middle">
               <h2>News</h2>
               <p>
-                - [10/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://venue-tutorial.github.io/">ECCV 2024 VENUE (Recent Advances in Video Content Understanding and Generation) Tutorial</a>
-                 on the topic of <i>"LLMs Meet image and video generation"</i>. 
-                 The slides are available at our <a href="https://github.com/YingqingHe/Awesome-LLMs-meet-Multimodal-Generation/blob/main/ECCV2024-VENUE-Tutorial-Slides-LLM-Meet-Image-and-Video-Generation.pdf">Github repo</a>.<br>
-                - [08/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://hunyuan.tencent.com/">Tencent Hunyuan</a> 
-                 on the topic of <i>"LLMs Meet Multimodal Generation and Editing"</i><br>
+                - [12/2024] 1 paper was accepted to <font style="color: #D8429E">AAAI 2025</font>.<br> 
+                - [10/2024] 1 paper was accepted to <font style="color: #D8429E">WACV 2025</font>.<br> 
                 - [08/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024 AI4VA Workshop</font>.<br> 
                 - [07/2024] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2024</font>.<br> 
                 - [07/2024] 1 paper was accepted to <font style="color: #D8429E">ECCV 2024</font>.<br> 
                 - [05/2024] We released a survey paper: <a href="https://arxiv.org/abs/2405.19334">LLMs Meet Multimodal Generation and Editing: A Survey</a>.<br>
-                - [03/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
                 - [03/2024] 1 paper was accepted to <font style="color: #D8429E">CVPR 2024</font>.<br> 
                 - [02/2024] 1 paper was accepted to <font style="color: #D8429E">TVCG 2024</font>.<br> 
                 - [01/2024] 2 papers were accepted to <font style="color: #D8429E">ICLR 2024</font> (including 1 Spotlight paper).<br> 
                 - [12/2023] 1 paper was accepted to <font style="color: #D8429E">AAAI 2024</font>.<br> 
-                - [11/2023] Released <a href="https://arxiv.org/abs/2310.19512">VideoCrafter 1</a>.<br>
+                - [11/2023] We released <a href="https://arxiv.org/abs/2310.19512">VideoCrafter 1</a>.<br>
                 - [08/2023] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2023</font>.<br> 
-                - [06/2023] <font style="color: #d07c22">Invited talk</font> at <a href="https://sites.google.com/view/loveucvpr23/home">CVPR 2023 LOVEU Workshop</a> on the topic of <i>"Crafting Your Videos: From Unconditional to <br>
-                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
-                  Controllable Video Diffusion Models"</i>.<br>
-                - [04/2023] Released <a href="https://github.com/AILab-CVC/VideoCrafter">VideoCrafter 0.9</a>.<br>
+                - [04/2023] We released <a href="https://github.com/AILab-CVC/VideoCrafter">VideoCrafter 0.9</a>.<br>
                 - [08/2021] 1 paper was accepted to <font style="color: #D8429E">ACM MM 2021</font> as an <font style="color: #D8429E">Oral</font> paper.<br> 
               </p>
-            </td>
+              </td>
             </tr>
           </tbody></table>
+
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:20px;width:100%;vertical-align:middle">
+              <h2>Talks</h2>
+              <p>
+                - [12/2024] <font style="color: #d07c22">Invited talk</font> at <a href="http://youth.csig.org.cn/CSIG2024/index.html#/"><font style="color: #D8429E">CSIG2024 (第二十届中国图象图形学学会青年科学家会议)</font></a> in Hangzhou.<br>
+                - [10/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://venue-tutorial.github.io/"><font style="color: #D8429E">ECCV 2024</font> VENUE (Recent Advances in Video Content Understanding and Generation) Tutorial</a>
+                 on the topic of <i>"LLMs Meet image and video generation"</i>. 
+                 The slides are available at our Github repo <a href="https://github.com/YingqingHe/Awesome-LLMs-meet-Multimodal-Generation/blob/main/ECCV2024-VENUE-Tutorial-Slides-LLM-Meet-Image-and-Video-Generation.pdf">Awesome-LLMs-meet-Multimodal-Generation</a>.<br>
+                - [08/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://hunyuan.tencent.com/">Tencent Hunyuan</a> 
+                 on the topic of <i>"LLMs Meet Multimodal Generation and Editing"</i><br>
+                - [03/2024] <font style="color: #d07c22">Invited talk</font> at <a href="https://www.meituan.com/">Meituan</a> on the topic of <i>"Recent Advance of Text-to-Video Generation"</i>.<br>
+                - [06/2023] <font style="color: #d07c22">Invited talk</font> at <a href="https://sites.google.com/view/loveucvpr23/home"><font style="color: #D8429E">CVPR 2023</font> LOVEU Workshop</a> on the topic of <i>"Crafting Your Videos: From Unconditional to <br>
+                  &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
+                  Controllable Video Diffusion Models"</i>.<br>
+              </p>
+              </td>
+            </tr>
+          </tbody></table>
         
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
       <tbody>
@@ -454,7 +466,7 @@
           <font style="color: #1772d0;">Xiu Li, </font> &nbsp;
           <a href="https://cqf.io/" target="_blank">Qifeng Chen</a>
           <br>
-          <em>WACV</em>, 2024
+          <em>WACV</em>, 2025
           <br>
           <a href="https://magic-stick-edit.github.io/">Project page</a> / 
           <a href="https://arxiv.org/abs/2312.03047">arXiv</a> / 
@@ -733,7 +745,7 @@
       <td style="padding:20px;width:100%;vertical-align:middle">
         <h2>Academic Services</h2>
         <p>
-          Conference Reviewer for CVPR, SIGGRAPH Asia.<br>
+          Conference Reviewer for CVPR, ICLR, SIGGRAPH Asia.<br>
           Journal Reviewer for TPAMI, IJCV, ACM Computing Surveys.
         </p>
       </td>
