--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 - [05/2024] We released a survey paper: <a href="https://arxiv.org/abs/2405.19334">LLMs Meet Multimodal Generation and Editing: A Survey</a>.<br>
                 - [03/2024] 1 paper was accepted to <font style="color: #D8429E">CVPR 2024</font>.<br> 
                 - [02/2024] 1 paper was accepted to <font style="color: #D8429E">TVCG 2024</font>.<br> 
-                - [01/2024] 2 papers were accepted to <font style="color: #D8429E">ICLR 2024</font> (including 1 Spotlight paper).<br> 
+                - [01/2024] 2 papers were accepted to <font style="color: #D8429E">ICLR 2024</font> (including 1 <font style="color: #D8429E">Spotlight</font> paper).<br> 
                 - [12/2023] 1 paper was accepted to <font style="color: #D8429E">AAAI 2024</font>.<br> 
                 - [11/2023] We released <a href="https://arxiv.org/abs/2310.19512">VideoCrafter 1</a>.<br>
                 - [08/2023] 1 paper was accepted to <font style="color: #D8429E">SIGGRAPH Asia 2023</font>.<br> 
