--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Yingqing He
+                  Yingqing He<br>
                 </p>
                 <p>
                   Hi there👋😋. <br>
@@ -58,13 +58,14 @@
                 </p>
                 <p>
                   Welcome to any types of research collaboration and discussions! 
-                  <!-- Our lab is hiring engineering-oriented research assistant (RA). If you would like to apply, feel free to reach out with your CV! -->
                 </p>
+                <p>Email: yhebm [at] connect [dot] ust [dot] hk</p>
                 <p style="text-align:center">
-                  <a href="yhebm@connect.ust.hk">Email</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=UDiGYN8AAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                   <a href="https://github.com/YingqingHe">Github</a> &nbsp;/&nbsp;
-                  <a href="https://www.linkedin.com/in/yingqing-he-6b2859168/">LinkedIn</a>
+                  <a href="https://www.linkedin.com/in/yingqing-he-6b2859168/">LinkedIn</a> &nbsp;/&nbsp;
+                  <a href="https://x.com/yingqing_he">Twitter</a> &nbsp;/&nbsp;
+                  <a href="https://www.xiaohongshu.com/user/profile/589a83d65e87e75bb222eec2?xsec_token=YBf7h8korjX_1T1fMzlWgITke5EkOH4q7yg0jbj_zR9d4=&xsec_source=app_share&xhsshare=CopyLink&appuid=589a83d65e87e75bb222eec2&apptime=1737200184&share_id=ae266786174d46e2a90373e922e4d554">Rednote</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
@@ -130,6 +131,146 @@
       </tbody>
     </table>
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      
+      <!-- VideoTuna -->
+      <tr>
+        <!-- <td style="padding:20px;width:25%;vertical-align:middle;">
+          <video  width=100% muted autoplay loop>
+            <source src="myassets/videotuna.gif" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </td> -->
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <img src='myassets/videotuna.gif' width="100%">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle;">
+          <a href="https://arxiv.org/abs/2405.19334">
+            <span class="papertitle">VideoTuna: A Powerful Toolkit for Video Generation with Model Fine-Tuning and Post-Training</span>
+          </a>
+          <br>
+          <strong>Yingqing He</strong>, Yazhou Xing, Zhefan Rao, Haoyu Wu, Zhaoyang Liu, Jingye Chen, Pengjun Fang, Jiajun Li, Liya Ji, Runtao Liu, Xiaowei Chi, Yang Fei, Guocheng Shao, Yue Ma, Qifeng Chen
+          <br>
+          <em>Github</em>, 2024 Nov
+          <br>
+          <a href="https://videoverses.github.io/videotuna/">Project page</a> / 
+          <a href="https://github.com/VideoVerses/VideoTuna">Github</a>
+          <p>VideoTuna is the first repo that integrates multiple AI video generation models for text-to-video, image-to-video, text-to-image generation for fine-tuning and post-training (to the best of our knowledge).
+            Additionally, VideoTuna provides a comprehensive pipeline in video generation, including pre-training, continuous training, post-training (alignment), and fine-tuning.
+          </p>
+        </td>
+      </tr>
+
+      <!-- videoVAE+ -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <video  width=100% muted autoplay loop>
+            <source src="myassets/vae+.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle;">
+          <a href="https://arxiv.org/abs/2405.19334">
+            <span class="papertitle">VideoVAE+: Large Motion Video Autoencoding with Cross-modal Video VAE</span>
+          </a>
+          <br>
+          <a href="https://yzxing87.github.io/">Yazhou Xing<sup>*</sup></a>, 
+          <a href="https://sunfly04.github.io/">Yang Fei<sup>*</sup></a>, 
+          <a href="https://github.com/YingqingHe"><strong><font style="color: #000000;">Yingqing He<sup>*&dagger;</sup></font></strong></a>, 
+          <a href="https://jingyechen.github.io/">Jingye Chen</a>, 
+          <a href="https://jiaxinxie97.github.io/Jiaxin-Xie/">Jiaxin Xie</a>, 
+          <a href="https://scholar.google.com/citations?user=Vl1X_-sAAAAJ&hl=zh-CN">Xiaowei Chi</a>, 
+          <a href="https://cqf.io/">Qifeng Chen<sup>&dagger;</sup></a>
+          <br>
+          <em>arXiv</em>, 2024 Dec
+          <br>
+          <a href="https://yzxing87.github.io/vae/">Project page</a> / 
+          <a href="https://arxiv.org/abs/2412.17805">arXiv</a> / 
+          <a href="https://github.com/VideoVerses/VideoVAEPlus">Github</a>
+          <p>VideoVAE+ is a state-of-the-art Video VAE model that can encode and decode video clips with large motion and high definition.
+          </p>
+        </td>
+      </tr>
+
+      <!-- modelGrow+ -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <img src='myassets/modelgrow.png' width="100%">
+        </td>
+          <td style="padding:20px;width:75%;vertical-align:middle;">
+            <a href="https://arxiv.org/abs/2405.19334">
+              <span class="papertitle">ModelGrow: Continual Text-to-Video Pre-training with Model Expansion and Language Understanding Enhancement</span>
+            </a>
+            <br>
+            <a href="https://scholar.google.com/citations?user=8yjKlAEAAAAJ&hl=en">Zhefan Rao<sup>*</sup></a>, 
+            <a href="https://scholar.google.com/citations?user=EMMxpHkAAAAJ&hl=en">Liya Ji<sup>*</sup></a>, 
+            <a href="https://yzxing87.github.io/">Yazhou Xing</a>, 
+            <a href="https://scholar.google.com/citations?user=YHTvXF4AAAAJ&hl=en">Runtao Liu</a>, 
+            <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en">Zhaoyang Liu</a>, 
+            <a href="https://jiaxinxie97.github.io/Jiaxin-Xie/">Jiaxin Xie</a>, 
+            <a href="#">Ziqiao Peng</a>, 
+            <a href="https://github.com/YingqingHe"><strong><font style="color: #000000;">Yingqing He<sup>&dagger;</sup></font></strong></a>, 
+            <a href="https://cqf.io/">Qifeng Chen<sup>&dagger;</sup></a>
+            <br>
+            <em>arXiv</em>, 2024 Dec
+            <br>
+            <a href="https://modelgrow.github.io/">Project page</a> / 
+            <a href="https://www.arxiv.org/abs/2412.18966">arXiv</a> / 
+            <a href="#">Github</a>
+            <p>ModelGrow is a method that scales the model capacity and enhances the language understanding of text-to-video models during continous Pre-training.
+            </p>
+          </td>
+      </tr>
+
+      <!-- VideoDPO -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <img src='myassets/videodpo.png' width="100%">
+        </td>
+          <td style="padding:20px;width:75%;vertical-align:middle;">
+            <a href="https://arxiv.org/abs/2405.19334">
+              <span class="papertitle">VideoDPO: Omni-Preference Alignment for Video Diffusion Generation</span>
+            </a>
+            <br>
+            <a href="https://scholar.google.com/citations?user=YHTvXF4AAAAJ&hl=en">Runtao Liu<sup>*</sup></a>, 
+            <a href="#">Haoyu Wu<sup>*</sup></a>, 
+            <a href="https://zhengziqiang.github.io/">Ziqiang Zheng</a>, 
+            <a href="#">Chen Wei</a>, 
+            <a href="https://github.com/YingqingHe"><strong><font style="color: #000000;">Yingqing He</font></strong></a>, 
+            <a href="#">Renjie Pi</a>, 
+            <a href="https://cqf.io/">Qifeng Chen<sup>&dagger;</sup></a>
+            <br>
+            <em>arXiv</em>, 2024 Dec
+            <br>
+            <a href="https://videodpo.github.io/">Project page</a> / 
+            <a href="https://arxiv.org/abs/2412.14167">arXiv</a> / 
+            <a href="https://github.com/CIntellifusion/VideoDPO">Github</a>
+            <p>
+            </p>
+          </td>
+      </tr>
+
+      <!-- hiprompt -->
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle;">
+          <img src='myassets/hiprompt.png' width="100%">
+        </td>
+        <td style="padding:20px;width:75%;vertical-align:middle;">
+          <a href="https://arxiv.org/abs/2409.02919">
+            <span class="papertitle">HiPrompt: Tuning-free Higher-Resolution Generation with Hierarchical MLLM Prompts</span>
+          </a>
+          <br>
+          Xinyu Liu, <strong>Yingqing He</strong>, Lanqing Guo, Xiang Li, Bu Jin, Peng Li, Yan Li, Chi-Min Chan, Qifeng Chen, Wei Xue, Wenhan Luo, Qifeng Liu, Yike Guo
+          <br>
+          <em>arXiv</em>, 2024 Sep
+          <br>
+          <a href="https://liuxinyv.github.io/HiPrompt/">Project page</a> / 
+          <a href="https://arxiv.org/abs/2409.02919">arXiv</a> / 
+          <a href="https://github.com/Liuxinyv/HiPrompt">Github</a>
+          <p>
+          </p>
+        </td>
+      </tr>
+
       <!-- mmtrail -->
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle;">
@@ -143,7 +284,7 @@
             <span class="papertitle">MMTrail: A Multimodal Trailer Video Dataset with Language and Music Descriptions</span>
           </a>
           <br>
-          <a href="#">Xiaowei Chi</a>, 
+          <a href="https://scholar.google.com/citations?user=Vl1X_-sAAAAJ&hl=zh-CN">Xiaowei Chi</a>, 
           <a href="#">Aosong Cheng</a>, 
           <a href="#">Pengjun Fang</a>, 
           <a href="#">Yatian Wang</a>, 
@@ -213,7 +354,7 @@
           <a href="https://scholar.google.com/citations?user=dghq4MQAAAAJ&hl=en">Zeyue Tian</a>, 
           <a href="https://scholar.google.com/citations?user=bLRjUzAAAAAJ&hl=en">Hongyu Liu</a>, 
           <a href="https://scholar.google.com/citations?user=Vl1X_-sAAAAJ&hl=zh-CN">Xiaowei Chi</a>, 
-          <a href="#">Runtao Liu</a>, 
+          <a href="https://scholar.google.com/citations?user=YHTvXF4AAAAJ&hl=en">Runtao Liu</a>, 
           <a href="https://scholar.google.com/citations?user=btgwZosAAAAJ&hl=en">Ruibin Yuan</a>, 
           <a href="https://yzxing87.github.io/">Yazhou Xing</a>, 
           <a href="https://whai362.github.io/">Wenhai Wang</a>, 
